Fix BazelTestRunner compatibility with jre8
Removes usages of Set.of() that were introduced in javase9

Fixes https://github.com/bazelbuild/bazel/issues/18300

Closes #18307.

PiperOrigin-RevId: 529369593
Change-Id: Id45afbb1bdee46910f4a9b632f479773c561c0a3